--- a/css/main.bundle.css
+++ b/css/main.bundle.css
@@ -204,7 +204,7 @@ a.icon > strong {
 .delete, .modal-close {
     -moz-appearance: none;
     -webkit-appearance: none;
-    background-color: rgba(10,10,10,.2);
+    background-color: rgb(18 18 18);
     border: none;
     border-radius: 290486px;
     cursor: pointer;
@@ -213,11 +213,11 @@ a.icon > strong {
     flex-grow: 0;
     flex-shrink: 0;
     font-size: 0;
-    height: 20px;
-    max-height: 20px;
-    max-width: 20px;
-    min-height: 20px;
-    min-width: 20px;
+    height: 40px;
+    max-height: 40px;
+    max-width: 40px;
+    min-height: 40px;
+    min-width: 40px;
     outline: none;
     position: relative;
     vertical-align: top;
@@ -246,11 +246,11 @@ a.icon > strong {
     }
 
     .delete:focus, .delete:hover, .modal-close:focus, .modal-close:hover {
-        background-color: rgba(10,10,10,.3)
+        background-color: rgb(196 62 62);
     }
 
     .delete:active, .modal-close:active {
-        background-color: rgba(10,10,10,.4)
+        background-color: rgb(211 211 211)
     }
 
 .is-small.delete, .is-small.modal-close {
@@ -2164,13 +2164,13 @@ a.box:active {
             }
 
     .button.is-success {
-        background-color: #48c774;
+        background-color: #121212;
         border-color: transparent;
         color: #fff
     }
 
         .button.is-success.is-hovered, .button.is-success:hover {
-            background-color: #3ec46d;
+            background-color: #c43e3e;
             border-color: transparent;
             color: #fff
         }
@@ -2185,9 +2185,9 @@ a.box:active {
             }
 
         .button.is-success.is-active, .button.is-success:active {
-            background-color: #3abb67;
+            background-color: #d3d3d3;
             border-color: transparent;
-            color: #fff
+            color: #141414
         }
 
         .button.is-success[disabled], fieldset[disabled] .button.is-success {
@@ -2910,6 +2910,7 @@ a.box:active {
             box-shadow: 0 0 20px #00000073;
         }
 
+
     .image.is-fullwidth {
         width: 100%
     }
@@ -2996,8 +2997,23 @@ a.box:active {
 
     .image.is-48x48 {
         height: 48px;
-        width: 48px
+        width: 48px;
+        transition-timing-function: ease;
+        transition: 125ms;
     }
+
+.card:hover .image.is-48x48 {
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+    transition-timing-function: ease;
+    transition: 250ms;
+}
+
+
+.card:hover .image img.is-roundedcorner {
+    border-radius: 6px;
+    outline: 1px solid #4b4b4b;
+}
 
     .image.is-64x64 {
         height: 64px;
@@ -5840,7 +5856,7 @@ a.list-item {
 
 .modal-card-foot, .modal-card-head {
     align-items: center;
-    background-color: #f5f5f5;
+    background-color: #333333;
     display: flex;
     flex-shrink: 0;
     justify-content: flex-start;
@@ -5849,23 +5865,23 @@ a.list-item {
 }
 
 .modal-card-head {
-    border-bottom: 1px solid #dbdbdb;
+    border-bottom: 2px solid #121212;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px
 }
 
 .modal-card-title {
-    color: #363636;
+    color: #dfdfdf;
     flex-grow: 1;
     flex-shrink: 0;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     line-height: 1
 }
 
 .modal-card-foot {
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
-    border-top: 1px solid #dbdbdb
+    border-top: 2px solid #121212;
 }
 
     .modal-card-foot .button:not(:last-child) {
@@ -5874,7 +5890,7 @@ a.list-item {
 
 .modal-card-body {
     -webkit-overflow-scrolling: touch;
-    background-color: #fff;
+    background-color: #121212;
     flex-grow: 1;
     flex-shrink: 1;
     overflow: auto;
